fix overflow issue in firefox and IE11

--- a/v4/css/main.css
+++ b/v4/css/main.css
@@ -314,7 +314,7 @@ h6 {
     align-content: center;
     align-items: center;
     margin-top: 15px;
-    width: 45%; }
+    width: 50%; }
     .project-image img {
       height: 100%;
       width: 100%; }
@@ -331,6 +331,7 @@ h6 {
   .project-container {
     max-width: 1080px; }
     .project-container:hover {
+      overflow: hidden;
       transition: all .3s ease-in-out;
       transform: scale(1.1); }
   .project-image {
